--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-yay
+<html>
+  <head>
+    <script>
+      function getJSON(url) {
+          var resp ;
+          var xmlHttp ;
+
+          resp  = '' ;
+          xmlHttp = new XMLHttpRequest();
+
+          if(xmlHttp != null)
+          {
+              xmlHttp.open( "GET", url, false );
+              xmlHttp.send( null );
+              resp = xmlHttp.responseText;
+          }
+
+          return resp ;
+      }
+      var gjson ;
+      gjson = getJSON('https://match.adsrvr.org/track/rid?ttd_pid=prebid&fmt=json') ;
+      console.log(gjson);
+    </script>
+  </head>
+  <body>
+  </body>
+</html>
