--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           return resp ;
       }
       var gjson ;
-      gjson = getJSON('https://match.adsrvr.org/track/rid?ttd_pid=prebid&fmt=json') ;
+      gjson = getJSON('https://match.adsrvr.org/track/rid?ttd_pid=openx&fmt=json') ;
       console.log(gjson);
     </script>
   </head>
