--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
       var gjson ;
       gjson = getJSON('https://match.adsrvr.org/track/rid?ttd_pid=openx&fmt=json') ;
-      console.log(gjson);
+      document.write(gjson);
     </script>
   </head>
   <body>
