--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     </script>
   </head>
   <body>
+    Requesting TDID from https://match.adsrvr.org/track/rid?ttd_pid=openx&fmt=json
   </body>
 </html>
