--- a/index-pxl.html
+++ b/index-pxl.html
@@ -34,9 +34,9 @@
   </head>
   <body>
     Requesting TDID from https://match.adsrvr.org/track/rid?ttd_pid=openx&fmt=json
-    <img src="https://match.adsrvr.org/track/rid?ttd_pid=openx&fmt=json" />
-    <a href = "#" onClick="getTDIDFromCookies();">Show my TDID</a>
-    <BR />
+    <img src="https://match.adsrvr.org/track/rid?ttd_pid=openx&fmt=img" />
+    <!--a href = "#" onClick="getTDIDFromCookies();">Show my TDID</a>
+    <BR /-->
     <a href = "#" onClick="getTDIDFromURL();return false;">Sync my TDID</a>
     <BR />
     <div id='tdids'>
